# SBAPR

./: .gitignore  README.md
demo-app/: README.md  pyproject.toml
demo-app/demo_app/: app.py
docker/: Dockerfile.test  docker-compose.yml
flatpak/: demo-app-different-launcher.sh  demo-app-launcher.sh  org.kde.demo-app-different-python.yml  org.kde.demo-app.yml
updates/: update_script.py
